--- a/index.html
+++ b/index.html
@@ -4,9 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>my first class</title>
 </head>
 <body>
-    
+    <h1>Hi👋</h1>
+    <h2> I am avanika</h2>
+    <p> I am from guntur.I pursued btech in Malineni Lakshmaiah Womens engineering college </p>
+
+    <hr>
+    <h3> My daily routine</h3>
+    <ol>
+        <li>wake up</li>
+        <li>fresh up</li>
+        <li>class</li>
+        <li>sleep</li>
+    </ol>
+    <h3>My hobbies </h3>
+    <ul>
+        <li>listening to music</li>
+        <li>sleeping</li>
+        <li>eating</li>
+    </ul>
+<hr>
+<h1>My favourite hero</h1>
+<h2> <strong>Mahesh Babu</strong> </h2>
+<img src="https://tse3.mm.bing.net/th?id=OIP.D2tTfkYDmF-gu_6HvBaFZgHaFj&pid=Api&P=0" alt="pic">
+<p> Ghattamaneni Mahesh Babu (born 9 August 1975) is an Indian actor, producer, media personality, and philanthropist who works mainly in Telugu cinema</p>
+<a href="https://en.wikipedia.org/wiki/Mahesh_Babu">About Mahesh Babu</a><br>
+<a href="moviesindex.html"> My favourite Movies</a>
+<hr>
+
+
+
+
+
+
 </body>
 </html>
