--- a/moviesindex.html
+++ b/moviesindex.html
@@ -7,7 +7,8 @@
     <title>Avanika-favorites</title>
 </head>
 <body>
-    <h1>My favourite movies</h1>
+    <div class=".my fav movies">
+        <h1>My favourite movies</h1>
     <hr>
     <h2>Athadu</h2>
     <img src="https://tse1.mm.bing.net/th?id=OIP.ym4MQKfiwLfRwBcGq8ty0gHaEo&pid=Api&P=0" alt="pic">
@@ -58,6 +59,9 @@
         GK kills his assistant and Govardhan for their failures. He then heads to Pali to kill all the villagers before the truth goes out to the public. The Tantrik warns GK that his greed would be his downfall, that Raju would save the villagers and bring death to GK, and keep Pali's population at 534, not letting any more die in the process. Raju arrives at Pali along with Sidhappa. GK shoots and kills Sidhappa, reducing the population to 533. Before dying, Siddhappa dies peacefully in Raju's arms. Enraged, Raju massacres GK's men and severs GK's palm. A terrified GK tries to run with Raju in pursuit. Raju catches up to him, and GK dies when a religious knife hanging from a nearby tree falls and stabs him in the neck after Raju curses him to die. The Tantrik reveals that Raju fulfilled his mission as God to save the village because although Sidhappa was killed, another baby was born to keep the village's population at 534. A new flag is being raised in the honor of child's birth.  <br>
         
         Cast</p>
+
+    </div>
+    
         <a href="index.html"> go to index</a>
 
 </body>
