--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avanika-contact</title>
 </head>
-<body>
+<body style="background-color:red">
     <div class=".form">
         <form action="mailto:saisarvanib9@gmail.com" method="post" enctype="text/plain">
             <label for="person-name"> <strong>Name</strong></label> <br>
