--- a/developers.html
+++ b/developers.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avanika-table</title>
+    <link rel="stylesheet" href="/styles/developers.css">
 </head>
-<body> <div class=".table">
+<body> <div class="table">
   <table>
     <thead>
         <th>S.no</th>
