--- a/google.html
+++ b/google.html
@@ -5,14 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Avanika-google</title>
+    <link rel="stylesheet" href="styles/google.css">
 </head>
 <body>
     <div class="Container">
         <!--Header Starts Here-->
         <header>
-            <nav><a href="https://mail.google.com/mail/u/0/">Gmail</a> <br><a href="https://images.google.com/">Images</a></nav>
-            
+            <nav><a href="https://mail.google.com/mail/u/0/">Gmail</a> 
+                <a href="https://images.google.com/">Images</a>
             <button>Sign in</button>
+        </nav>
             <br>
         </header>
         <!--Header Closes Here-->
@@ -28,12 +30,21 @@
 
         <!--Footer Starts Here-->
        <footer>
-           <p>
-              India
-           </p>
-          <p>
-              About <nsbp></nsbp> Advertising<nsbp></nsbp> Bussines <nsbp></nsbp>How search Works<nsbp></nsbp> <nsbp></nsbp><nsbp></nsbp><nsbp></nsbp>   privacy<nsbp></nsbp> Terms <nsbp></nsbp>Settings
-          </p>
+        <div class="footer">
+            <p>
+                India
+             </p>
+             <hr>
+             <div id="footer2">
+                <a href="https://in.search.yahoo.com/search?fr=mcafee&type=E211IN0G0&p=about+google">About</a>    <a href="https://in.search.yahoo.com/search?fr=mcafee&type=E211IN0G0&p=advertising">Advertising</a>    <a href="https://in.search.yahoo.com/search?fr=mcafee&type=E211IN0G0&p=business">Business</a>    <a href="https://in.search.yahoo.com/search?fr=mcafee&type=E211IN0G0&p=how+search+works">How Search Works</a>
+
+             </div>
+            <div id="footer3">
+                <a href="https://in.search.yahoo.com/search?fr=mcafee&type=E211IN0G0&p=privacy">Privacy</a>    <a href="https://in.search.yahoo.com/search?fr=mcafee&type=E211IN0G0&p=terms">Terms</a>    <a href="https://in.search.yahoo.com/search?fr=mcafee&type=E211IN0G0&p=settings">Settings</a>
+            </div>
+
+        </div>
+           
        </footer>
        <!--Footer ends Here-->
     </div>
