--- a/clock.html
+++ b/clock.html
@@ -12,12 +12,19 @@
     <div class="container">
         <div id="display">
             <div id="time">
-                 05:45:00 AM 
+                 <span id="hours">00</span>
+                 <span>:</span>
+                 <span id="minutes">00</span>
+                 <span>:</span>
+                 <span id="seconds">00</span>
+                 <span id="session">AM</span>
+            
             </div>
 
         </div>
 
     </div>
 </body>
+<script src="./scripts/clock.js"></script>
 
 </html>
