--- a/random.html
+++ b/random.html
@@ -4,15 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./random.css">
-    <script>
-     function myFunction() {
-       alert( Math.floor(Math.random()*10000));
-     }
-    </script>
+    <link rel="stylesheet" href="./styles/random.css">
     <title>Document</title>
 </head>
 <body>
+    <p id="random"></p>
     <button onclick="myFunction()">click me</button>
 </body>
+<script src="./scripts/random.js"></script>
+
 </html>
