--- a/preview.html
+++ b/preview.html
@@ -5,42 +5,38 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles/preview.css">
-    <title>Bhargav-calculator</title>
+    <title>Document</title>
+  
+    
 </head>
 <body>
-    <div class="wraper">
-    <div class="calculator">
-     <input type="text" placeholder="0">
-     <div>
-     <button>Cl</button>
-     <button>DEL</button>
-     <button>%</button>
-     <button>/</button>
-     </div>
-     <div>
-        <button>7</button>
-        <button>8</button>
-        <button>9</button>
-        <button>*</button>  
-     </div>
-     <div>
-     <button>4</button>
-     <button>5</button>
-     <button>6</button>
-     <button>-</button>
-     </div>
-     <div>
-        <button>1</button>
-        <button>2</button>
-        <button>3</button>
-        <button>+</button>  
-     </div>
-     <div>
-        <button>.</button>
-        <button>0</button>
-        <button id="equal">=</button>
-     </div>
-    </div>
-    </div>
+   <div class="container">
+    <!-- white and black keys -->
+    <div data-note="CB#" class="key white black" ><h3>CB#</h3></div>
+    <div data-note="D" class="key white black" ><h3>D</h3></div>
+    <!-- white keys -->
+    <div data-note="EFb" class="key white" ><h3>EFb</h3></div>
+     <!-- white and black keys -->
+    <div data-note="FE#" class="key white black" ><h3>FE#</h3></div>
+    <div data-note="G" class="key white black" ><h3>G</h3></div>
+    <div data-note="A" class="key white black" ><h3>A</h3></div>
+    <!-- white keys -->
+    <div data-note="BCb" class="key white" ><h3>BCb</h3></div>
+    
+
+    <!-- Audio files -->
+   <audio id="Cb" src="images/Cb.mp3"></audio>
+   <audio id="D" src="images/D.mp3"></audio>
+   <audio id="EFb" src="images/E.mp3"></audio>
+   <audio id="FE#" src="images/F.mp3"></audio>
+   <audio id="G" src="images/G.mp3"></audio>
+   <audio id="A" src="images/Ab.mp3"></audio>
+   <audio id="BCb" src="images/Bb.mp3"></audio>
+   <audio id="E" src="images/E.mp3"></audio>
+   <audio id="D" src="images/D.mp3"></audio>
+   <audio id="Y" src="images/Cb.mp3"></audio>
+ 
+
 </body>
+<script src="./scripts/preview.js"></script>
 </html>
