--- a/work.html
+++ b/work.html
@@ -4,53 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Avanika-portfolio</title>
-    <link rel="stylesheet" href="./styles/portfolio.css">
+    <title>Avanika-works</title>
+    <link rel="stylesheet" href="./styles/work.css">
 </head>
 <body>
     <div class="wrapper">
-        <div class="container">
-            <!---nav starts---->
-            <nav>
-                <ul class="menu">
-                    <li><a href="./work.html" target="_blank">Works</a></li>
-                    <li><a href="./blog.html" target="_blank">Blog</a></li>
-                    <li><a href="./contacts.html" target="_blank">Contact</a></li>
-                </ul>
-                <i id="homeBurger" class="fa-solid fa-bars"></i>
-            </nav>
-            <!---nav ends---->
-            <!---bio starts---->
-            <div class="bio">
-                <div class="self">
-                    <h1>Hi, I am <span>Avanika</span>,<br>Web Developer</h1>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, in similique id necessitatibus odit aspernatur maiores minus. Eum labore quidem delectus dolorum ducimus! Repudiandae praesentium placeat dicta numquam sit excepturi.</p>
-                </div>
-                <div class="pic">
-                    <img id="image" src="./images/download.jpg" alt="">
-                </div>
-            </div>
-            <div><button>Download Resume</button></div>
-            <!---bio ends---->
-        </div>
-        <!-- Recent posts starts -->
-        <div class="container1">
-           <div id="rP"><p>Recent posts</p></div>
-            <div class="posts">
-                <div class="post1">
-                <h2>Making Design Design System From Scratch</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Numquam commodi labore, dignissimos similique quos maiores a deleniti deserunt magni sint molestias aperiam fugit incidunt exercitationem officiis modi delectus distinctio veniam!</p>
-                </div>
-                <div class="post2">
-                <h2>Making Design Design System From Scratch</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, recusandae unde totam eius enim explicabo nihil deleniti fugiat, inventore optio adipisci debitis expedita natus, facere quisquam vitae alias sequi blanditiis?</p>
-                </div>
-            </div>
-        </div>
-        <!-- Recent endss starts -->
-         <!-- Featured works starts -->
+        <nav>
+            <ul class="menu">
+                <li><a target="_blank" href="./blog.html">Blog</a></li>
+                <li><a href="./work.html">Works</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+            <i id="homeBurger" class="fa-solid fa-bars"></i>
+          </nav>
+            <!-- Featured works starts -->
         <div>
-            <p id="Fw">Featured Works</p>
+            <h1 id="Fw">Work</h1>
             <!-- dashboard starts -->
             <div class="container2">
                 <div class="Dimage">
@@ -65,7 +34,7 @@
         </div>
      <div class="HR"><hr></div>
         <!-- vibrant starts -->
-        <div class="container2">
+          <div class="container2">
             <div class="Dimage">
                 <img id="dashBoard" src="./images/Vibrant-Portraits-Of-Animals-And-dog.jpg" alt="">
             </div>
@@ -103,5 +72,5 @@
     </div>
     <script src="https://kit.fontawesome.com/62bf79d6f8.js" crossorigin="anonymous"></script>
 </body>
-<script src="./scripts/portfolio.js"></script>
+<script src="./scripts/portfolio.js"></script
 </html>
